gets characters appearing in correct divs and adds hidden class to appropriate rows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,18 +7,6 @@
     width: 300px;
 }
 
-.char1 {
-    background-image: url(../images/fey-headshot.jpg);
-}
-
-.char2 {
-    background-image: url(../images/wiig-headshot.jpg);
-}
-
-.char3 {
-    background-image: url(../images/mckinnon-headshot.jpg);
-}
-
-.char4 {
-    background-image: url(../images/rudolph-headshot.jpg);
+.hidden {
+    display: none;
 }
