--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,21 @@
 body {
     background-image: url("../images/background.png");
     background-size: cover;
+    font-family: 'New Rocker', cursive;
 }
 
 .container {
     width: 80%;
+}
+
+h1 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 75px;
+}
+
+h3 {
+    font-size: 20px;
 }
 
 .character-row,
@@ -18,6 +29,10 @@ body {
     position: relative;
 }
 
+button::first-letter {
+    text-transform: uppercase;
+}
+
 .character-photo {
     width: 250px;
     position: relative;
@@ -26,8 +41,17 @@ body {
 
 .character-stats {
     position: absolute;
-    top: 136px;
+    bottom: -10px;
     color: #e4e3e3;
+}
+
+.dead {
+    position: absolute;
+    font-size: 290px;
+    top: -58px;
+    left: 24px;
+    color: rgb(201, 4, 69);
+    z-index: 1;
 }
 
 img {
