--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
-    background-image: url("../images/background.png");
+    background-image: url("../images/battlebackground.jpg");
     background-size: cover;
     font-family: 'New Rocker', cursive;
+    color: rgb(223, 223, 223);
 }
 
 .container {
@@ -12,6 +13,23 @@ h1 {
     text-transform: uppercase;
     text-align: center;
     font-size: 75px;
+}
+
+#hero-row-text,
+#enemy-row-text,
+#defender-row-text {
+    background: rgba(0, 0, 0, 0.842);
+    padding: 0px 22px 7px 1px;
+}
+
+#defender-damage {
+    background: rgba(0, 0, 0, 0.842);
+    padding: 11px 19px 13px 1px;
+}
+
+#hero-damage {
+    background: rgba(0, 0, 0, 0.842);
+    padding: 8px 2px 12px 17px;
 }
 
 h3 {
@@ -27,6 +45,10 @@ h3 {
 
 .damage-bar {
     position: relative;
+}
+
+button {
+    color: #242424;
 }
 
 button::first-letter {
@@ -57,7 +79,7 @@ button::first-letter {
 img {
     position: relative;
     width: 100%;
-    clip: rect(0px,270px,304px,0px);
+    border: 2px solid #242424;
 }
 
 
