--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ h1 {
     font-size: 75px;
 }
 
+.identifier {
+    margin-bottom: 0px;
+}
+
 #hero-row-text,
 #enemy-row-text,
 #defender-row-text {
@@ -22,13 +26,14 @@ h1 {
     padding: 0px 22px 7px 1px;
 }
 
-#defender-damage {
-    background: rgba(0, 0, 0, 0.842);
+.defender-damage {
+    background: #000;
     padding: 11px 19px 13px 1px;
+    overflow: auto;
 }
 
-#hero-damage {
-    background: rgba(0, 0, 0, 0.842);
+.hero-damage {
+    background: #000;
     padding: 8px 2px 12px 17px;
 }
 
@@ -45,6 +50,22 @@ h3 {
 
 .damage-bar {
     position: relative;
+    max-height: 50%;
+}
+
+.damage {
+    font-size: 24px;
+    float: left;
+}
+
+.sticker1 {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg);
+}
+
+.sticker2 {
+    -webkit-transform: rotate(-2deg);
+    transform: rotate(-2deg);
 }
 
 button {
