--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,39 +16,39 @@ h1 {
 }
 
 .identifier {
-    margin-bottom: -10px;
+    margin-bottom: -15px;
 }
 
 #hero-row-text {
-    background: #000;
+    background: #111;
     padding: 0px 22px 7px 1px;
 }
 
 #character-row-text {
-    background: #000;
+    background: #111;
     padding: 11px 2px 1px 7px;
 }
 
 #enemy-row-text {
-    background: #000;
+    background: #111;
     padding: 13px 18px 5px 0px;
 }
 
 #defender-row-text {
-    background: #000;
+    background: #111;
     padding: 3px 1px 11px 17px;
 }
 
 .defender-damage,
 .dead-defender-damage {
-    background: #000;
-    padding: 11px 19px 13px 1px;
+    background: #111;
+    padding: 2px 1px 7px 23px;
     overflow: auto;
 }
 
 .hero-damage {
-    background: #000;
-    padding: 8px 2px 12px 17px;
+    background: #111;
+    padding: 12px 19px 4px 0px;
 }
 
 h3 {
@@ -97,6 +97,16 @@ h3 {
     transform: rotate(-2deg);
 }
 
+.sticker5 {
+    -webkit-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+}
+
+.sticker6 {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg);
+}
+
 button {
     color: #242424;
 }
@@ -130,6 +140,7 @@ img {
     position: relative;
     width: 100%;
     border: 2px solid #242424;
+    z-index: -1;
 }
 
 
