adds reset button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,12 @@ h1 {
     padding: 3px 1px 11px 17px;
 }
 
+button {
+    width: 180px;
+    height: 50px;
+    font-size: 18px;
+}
+
 .defender-damage,
 .dead-defender-damage {
     background: #111;
