--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ h1 {
     margin-bottom: -15px;
 }
 
+#title-text {
+    background: #111;
+    padding: 0px 19px 2px 8px;
+}
+
 #hero-row-text {
     background: #111;
     padding: 0px 22px 7px 1px;
@@ -94,8 +99,8 @@ h3 {
 }
 
 .sticker3 {
-    -webkit-transform: rotate(-1deg);
-    transform: rotate(-1deg);
+    -webkit-transform: rotate(1deg);
+    transform: rotate(1deg);
 }
 
 .sticker4 {
@@ -148,5 +153,3 @@ img {
     border: 2px solid #242424;
     z-index: -1;
 }
-
-
